--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<title>Orbit Report</title>
 <div class="search-form">
     <input #searchTerm (keyup.enter) = 'search(searchTerm.value)'>
     <button  (click) = 'search(searchTerm.value)'>Search</button>
